--- a/posts/blender-弯曲修改器做器皿_详解/index.mdx
+++ b/posts/blender-弯曲修改器做器皿_详解/index.mdx
@@ -52,8 +52,8 @@ publishDate: 2026-01-21
 这里选择**弯曲**，角度填写 **360°** ，轴向 **Z**。于是你会得到一个没有顶面和底面的柱体。
 尺寸为 **80 &times; 80 &times; 90 mm**
 
-![step-3-1](./images/step-3-1.webp)
-![step-3-2](./images/step-3-2.webp)
+![step-3-1|scroll](./images/step-3-1.webp)
+![step-3-2|scroll](./images/step-3-2.webp)
 
 ## 焊接
 
